cleanup plot designs. add current best capturetest, iqtest, and phasetest tcl

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ capplay_jc2/
 capplay_jc1/
 foo/
 test_iq_2021.1/
+iqtest_2021.2/
+test_phasematch_2021.2ug/
+test_phasematch_2021.2/
+test_phasematch_2021.1/
+phasetest_2021.2/
+captest_2021.2_1/
+captest_2021.2/
+deleteme/
