--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ captest_2021.2_1/
 captest_2021.2/
 deleteme/
 b2rcaptest/
+
+# test system projects
+rfdc_test_prj/
+opfb_test_prj/
+reschan_test_prj/
+gen3_top_prj/
