updated for test project

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ deleteme/
 b2rcaptest/
 
 # test system projects
+gen3_top_noddcmath_prj/
 if111_throughphase_test1_prj/
 rfdc_test_prj/
 opfb_dac_loopback_prj/
